--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-			<img src="images/HockEyePreview.png" alt="HockEye Logo" class="logo">
+			<img src="images/HockEyeLogoText.png" alt="HockEye Logo" class="logo">
             <h1>GameTracker User Guide 🏒</h1>
             <p class="intro">Welcome! This guide will walk you through everything you need to know to accurately track game events and provide valuable data for your team.</p>
         </header>
