--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                     <span>Game Selection Dropdown</span>
                 </div>
 
+				<div class="tip-box">
+					<strong>Already Set Up?</strong> If you select a game and are taken directly to the rink without seeing the popups below, it means the coach has already set the roster and goalie. You can proceed directly to tracking!
+				</div>
+
+
                 <h3>2. Set the Game Roster (Mandatory)</h3>
                 <p>When you select a game for the first time, a <strong>Roster Setup</strong> screen will appear. You can select primary and affiliate players. Click <strong>"Set Roster"</strong> to confirm.</p>
                 <div class="tip-box">
@@ -198,7 +203,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 Your Team Name - GameTracker Guide</p>
+            <p>&copy; 2025 HockEye - GameTracker Guide</p>
         </footer>
 
     </div>
