--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				</div>
 
 
-                <h3>2. Set the Game Roster (Mandatory)</h3>
+                <h3>2. Set the Game Roster</h3>
                 <p>When you select a game for the first time, a <strong>Roster Setup</strong> screen will appear. You can select primary and affiliate players. Click <strong>"Set Roster"</strong> to confirm.</p>
                 <div class="tip-box">
                     <strong>Note:</strong> You can add players to the roster mid-game, but you <strong>cannot remove</strong> them. This must be done by the account owner.
@@ -69,7 +69,7 @@
                     <span>Roster Setup Screen</span>
                 </div>
                 
-                <h3>3. Select the Starting Goalie (Mandatory)</h3>
+                <h3>3. Select the Starting Goalie</h3>
                 <p>After the roster is set, you must select the starting goalie or "Empty Net". Tracking cannot begin until a goalie is selected.</p>
                 <div class="screenshot-placeholder">
                     <img src="images/SetGoalie.png"  alt="A screenshot of the goalie selection popup.">
