--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
                         <li><a href="#team-schedule">Schedule</a></li>
                     </ul>
                 </li>
-                <li><a href="#gametracker">Part 2: GameTracker Guide</a></li>
+                <li><a href="#gametracker">Part 2: GameTracker Guide</a>
+                    <ul>
+                        <li><a href="#settings">Important First Step: Team Settings</a></li>
+                        <li><a href="#setup">Pre-Game Setup</a></li>
+                        <li><a href="#interface">The Tracking Interface</a></li>
+                        <li><a href="#tracking">How to Track Events</a></li>
+                        <li><a href="#managing">Managing a Game in Progress</a></li>
+                    </ul>
+                </li>
                 <li><a href="#shot-chart">Part 3: Shot Chart</a></li>
                 <li><a href="#stats">Part 4: Stats</a></li>
                 <li><a href="#glossary">Glossary of Terms</a></li>
