--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         <li><a href="#interface">The Tracking Interface</a></li>
                         <li><a href="#tracking">How to Track Events</a></li>
                         <li><a href="#managing">Managing a Game in Progress</a></li>
+						<li><a href="#strategies">Tracking Tips & Strategies</a></li>
                     </ul>
                 </li>
                 <li><a href="#shot-chart">Part 3: Shot Chart</a></li>
@@ -227,6 +228,31 @@
                     <img src="images/GameEvents.png" alt="A screenshot of the Events List with edit and delete icons circled.">
                     <span>Editing Events</span>
                 </div>
+
+				<h3 id="strategies">Tracking Tips & Strategies</h3>
+				<p>GameTracker is about accuracy, not speed or timing. Here are some tips to capture the best data possible:</p>
+				<ul>
+                    <li><strong>Prepare for Faceoffs:</strong> Before the puck is dropped, click the Faceoff button and select your player. Then, as soon as the faceoff happens, you only need to click the result (WIN/LOSS) in the correct zone.</li>
+                    <li><strong>Batch Your Events:</strong> During heavy action, it can be difficult to track everything in real-time. Do your best to remember 2-3 events that just happened. At the next whistle or lull in play, quickly log them.</li>
+                    <li><strong>Accuracy Over Order:</strong> Don't worry about the game clock or getting the events in the perfect chronological sequence. It's more important to get accurate data for your coaches than to follow the game second-by-second. HockEye does not do any analytics involving time of game other than the period itself. You can always go back and add or edit events later on.</li>
+                </ul>
+				<h3>Collaborative Tracking (Team Tracking)</h3>
+				<p>It's possible for multiple people to track the same game simultaneously to capture more detail. If you use this method, divide the responsibilities clearly before the game starts.</p>
+
+				<h4>Example Division of Labor:</h4>
+				<ul>
+					<li><strong>Tracker 1 (Primary):</strong> Focuses on all shot events (Shots, Goals, Misses, Posts) and Faceoffs.</li>
+					<li><strong>Tracker 2 (Secondary):</strong> Focuses on other events like Takeaways, Giveaways, Hits, and Blocks.</li>
+				</ul>
+
+				<div class="tip-box">
+					<strong>⚠️ Critical Warning:</strong> Regardless of how you divide the tasks, it is essential that your team logs all <strong>Penalties</strong> accurately. When one person enters a penalty, the game situation (e.g., 5v4 PP) updates for <strong>everyone</strong> tracking the game. This ensures all events are marked with the proper on-ice situation, which is vital for accurate analysis. Remember to also manually reset the game situation when the penalty expires.
+				</div>
+
+				<div class="tip-box">
+				  <strong>⚠️ Critical Warning:</strong> If you are tracking with a partner, you <strong>must</strong> ensure you are both tracking your team's offensive and defensive zones on the same side of the ice. Communicate before the game and at the start of each period to confirm which end your team is attacking.
+				</div>
+
             </section>
             
             <hr style="margin: 3rem 0;">
