--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<li><strong>League Integration:</strong> This feature allows you to specify your league's standings webpage URL. When set, the standings will be displayed embedded directly within the HockEye site.</li>
                 </ul>
 				<div class="tip-box">
-                    <strong>💡 Pro Tip:</strong> When your team is at a tournament, you can temporarily change the Standings Page URL to the tournament's website to easily keep track of the standings.
+                    <strong>💡 Pro Tip:</strong> When your team is at a tournament, you can set the Alternate Standings Page URL to the tournaments standings page and specify an expiry date, During that time frame you'll have the tournament website embeded in HockeEye!
                 </div>
                 <div class="screenshot-placeholder">
                     <img src="images/TeamInfo.png" alt="A screenshot of the Team Info settings page.">
