--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <hr style="margin: 2rem 0;">
 
                 <h3 id="team-info">Team Info</h3>
-                <p>This is where you set your team's identity.</p>
+                <p>This is where you set your team's identity. On mobile devices, the Import Roster and Import Schedule tools are also located here.</p>
                 <ul>
                     <li><strong>Team Details:</strong> Add your team's city and name, upload a logo, and set your primary, secondary, and tertiary team colors.</li>
                     <li><strong>Use Lines:</strong> Toggling this "On" makes the <strong>Lines</strong> tab available in the Team Manager. This provides an alternative, visual way for coaches to set the game roster using line combinations.</li>
@@ -62,7 +62,7 @@
 					<li><strong>League Integration:</strong> This feature allows you to specify your league's standings webpage URL. When set, the standings will be displayed embedded directly within the HockEye site.</li>
                 </ul>
 				<div class="tip-box">
-                    <strong>💡 Pro Tip:</strong> When your team is at a tournament, you can set the Alternate Standings Page URL to the tournaments standings page and specify an expiry date, During that time frame you'll have the tournament website embeded in HockeEye!
+                    <strong>💡 Pro Tip:</strong> When your team is at a tournament, you can set the Alternate Standings Page URL to the tournament's website and specify an expiry date. During that time frame, you'll have the tournament website embedded in HockEye!
                 </div>
                 <div class="screenshot-placeholder">
                     <img src="images/TeamInfo.png" alt="A screenshot of the Team Info settings page.">
